# uws-react-native

./: .gitignore  CONTRIBUTING.md  README.md  eslint.config.mjs  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yaml
.github/workflows/ISSUE_TEMPLATE/: 🐛-bug.md
example/: app.config.ts  metro.config.js  tsconfig.json
example/src/app/: index.tsx
examples/android-ios/: app.config.ts  index.ts  metro.config.js  package.json  react-native.config.js  tsconfig.json
examples/android-ios/src/: App.tsx
examples/app/: package.json  tsconfig.json
examples/app/src/: index.ts
examples/app/src/screens/: index.ts
examples/app/src/screens/home/: Page.tsx  _use-server.ts
examples/app/src/screens/home/_item/: Item.tsx  ItemProps.ts  ItemRef.ts  ItemState.ts  index.ts
examples/macos/: app.json  babel.config.js  index.js  metro.config.js  package.json  react-native.config.js  tsconfig.json
examples/macos/src/: App.tsx
examples/macos/src/types/: carbon-icons.d.ts
package/: ReactNativeUws.podspec  UwsReactNative.podspec  package.json  react-native.config.js
package-builder/scripts/: bin.mjs  uws-dir-setup.mjs
package-builder/scripts/_bob/: _prepack.mjs
package/android/: build.gradle.kts
package/android/src/main/java/id/sufeni/oss/uwsreactnative/: UwsReactNativePackage.kt
package/apple/: OnLoad.mm
package/cpp/: CMakeLists.txt  ReactNativeUwsModule.cpp  ReactNativeUwsModule.h  UwsReactNativeModule.cpp  UwsReactNativeModule.h
package/cpp/app/: AppHost.h  AppRunner.h  CMakeLists.txt  HttpRequestObject.h  HttpResponseObject.h  RecognizedString.h  TemplatedAppObject.h  WebSocketBehaviorImpl.h  WebSocketObject.h
package/cpp/bridging/: ArrayBuffer.h  CMakeLists.txt
package/cpp/jsi/: Buffer.h  CMakeLists.txt
package/src/_internal/native-modules/: NativeReactNativeUws.ts  NativeUwsReactNative.ts
package/src/modules/: App.ts  CompressOptions.ts  SSLApp.ts  getParts.ts  index.ts  us_listen_socket_close.ts  us_socket_local_port.ts
package/src/types/: HttpRequest.ts  HttpResponse.ts  HttpRouterOptions.ts  MultipartField.ts  RecognizedString.ts  TemplatedApp.ts  WebSocket.ts  WebSocketBehavior.ts  WebSocketBehaviour.ts  index.ts
scripts/: release-github.mjs  release.mjs
