# Currently, this CMake is only used by Android for React Native C++ static autolinking
# We need to adjust this build if this is getting used by other platforms
# or to build Shared Object file.

project("react_native_uws")
cmake_minimum_required(VERSION 3.14.0)

# include(FetchContent)

set(CMAKE_VERBOSE_MAKEFILE ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
# set(CMAKE_ANDROID_STL_TYPE "c++_static")
set(ANDROID_SUPPORT_FLEXIBLE_PAGE_SIZES ON)

set(LIB_ANDROID_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../android")
set(LIB_ANDROID_GENERATED_JNI_DIR ${LIB_ANDROID_DIR}/build/generated/source/codegen/jni)
set(LIB_CODEGEN_SPEC_NAME "ReactNativeUwsSpecs")

if(CMAKE_ANDROID_ARCH_ABI STREQUAL "arm64-v8a" OR CMAKE_ANDROID_ARCH_ABI STREQUAL "x86_64")
	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,-z,max-page-size=16384")
endif()

find_package(ReactAndroid REQUIRED CONFIG)
find_package(fbjni REQUIRED CONFIG)
find_package(ZLIB REQUIRED)

file(
	GLOB_RECURSE
	LIB_SHARED_SRCS
	RELATIVE
	${CMAKE_CURRENT_SOURCE_DIR}
	"./*.cpp"
)

# It's useful later to call cpp to Java/Kotlin
# file(GLOB_RECURSE LIB_ANDROID_SRCS RELATIVE ${CMAKE_SOURCE_DIR} "src/main/cpp/*.cpp")
file(
	GLOB
	LIB_ANDROID_SRCS
	RELATIVE
	${LIB_ANDROID_DIR}
	"src/main/cpp/*.cpp"
)

# Codegen source files
file(
	GLOB_RECURSE
	LIB_CODEGEN_SRCS
	CONFIGURE_DEPENDS
	${LIB_ANDROID_GENERATED_JNI_DIR}/*.cpp
	${LIB_ANDROID_GENERATED_JNI_DIR}/**/*.cpp
)

add_library(
	${PROJECT_NAME}
	STATIC
	${LIB_SHARED_SRCS}
	${LIB_ANDROID_SRCS}
	${LIB_CODEGEN_SRCS}
)

# Add headers search paths
target_include_directories(
	${PROJECT_NAME}
	PUBLIC
	"."
	${LIB_ANDROID_SRCS}
	${LIB_ANDROID_GENERATED_JNI_DIR}
	"${LIB_ANDROID_GENERATED_JNI_DIR}/react/renderer/components/${LIB_CODEGEN_SPEC_NAME}"
)

# uSockets & uWebSockets setup
# Thanks to https://github.com/tony-go/cmake-uwebsockets/blob/main/CMakeLists.txt

# The "uSockets" and "uWebSockets" files
# are generated by /uws-react-native/package-builder/scripts/_uws-mod.mjs.
# If you are library user and see this note from your /node_modules,
# the "uws-mod.mjs" is not part of the library file.
# Visit our repository https://github.com/RakaDoank/uws-react-native

# +++++ uSockets +++++
file(
	GLOB_RECURSE
	USOCKETS_SRCS
	CONFIGURE_DEPENDS
	"./uSockets/*.c"
)

add_library(
	uSockets
	${USOCKETS_SRCS}
)

# We make the uSockets headers flatten path without its directory name
# because uWebSockets include the uSockets header internally without its directory name.
# So whoever want to use uSockets including the uWebSockets
# They just need to write like ` #include "libusockets.h" `.
target_include_directories(
	uSockets
	PUBLIC
	"./uSockets"
)

target_compile_definitions(
	uSockets
	PRIVATE
	LIBUS_NO_SSL
)
# ----- uSockets -----

# +++++ uWebSockets +++++
add_library(
	uWebSockets
	INTERFACE
)

# Notice that `uWebSockets` directory has another directory inside with the same name `uWebSockets`.
# So, to include uWebSockets headers, the directory name has to be included.
# ` #include "uWebSockets/App.h" `
target_include_directories(
	uWebSockets
	INTERFACE
	"./uWebSockets"
)

target_link_libraries(
	uWebSockets
	INTERFACE
	uSockets
	${ZLIB_LIBRARIES}
)

target_compile_options(uWebSockets INTERFACE -Wno-deprecated-declarations)
# ----- uWebSockets -----

add_subdirectory(app)
add_subdirectory(bridging)
add_subdirectory(jsi)

# Link Libraries
target_link_libraries(
	${PROJECT_NAME}
	ReactAndroid::reactnative
	ReactAndroid::jsi
	fbjni::fbjni
	react_codegen_ReactNativeUwsSpecs
	uWebSockets
	android
	log
	react_native_uws::app
	react_native_uws::bridging
	react_native_uws::jsi
)
